# timetabletag-online

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/event_card/: mod.rs  test.rs
backend/src/game/: finished_game.rs  in_progress_game.rs  lobby.rs  mod.rs  rest_api.rs  test.rs
backend/src/location/: mod.rs  test.rs
backend/src/powerup/: mod.rs
backend/src/rest_api/: mod.rs
backend/src/timetable_card/: mod.rs  test.rs
cli_client/: Cargo.toml
cli_client/src/: main.rs
docs/: api-spec.md
