[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = {version="1.11.0",features = ["v4", "serde"]}
rand = "0.8.5"
actix-web = { version = "4.9.0", default-features = false, features = ["compress-gzip", "macros"] }
futures-util = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"